# Master-Thesis

./: .clang-format  .gitignore  CMakeLists.txt  PreLoad.cmake  README.md  cmake-tools-kits.json  demo.bat  sources.md  tasks.todo
src/core/datastructures/: CMakeLists.txt  asyncpool.hpp  fixedarray.hpp  flexiblearray.hpp
src/core/input/: CMakeLists.txt  input.cpp  input.h  inputlistener.cpp  inputlistener.h  inputmanager.cpp
src/core/log/: CMakeLists.txt
src/core/math/: CMakeLists.txt  linearalgebra.hpp  matrix.hpp
src/core/serializable/: CMakeLists.txt  binary_io.cpp  binary_io.h  serializable.cpp  serializable.h
src/core/tools/: CMakeLists.txt  corecontext.cpp  corecontext.h  logger.cpp  logger.h  memory.hpp  namethreads.cpp  namethreads.h  placementptr.hpp  reflectable.hpp  singleton.hpp  util.hpp
src/drv/: CMakeLists.txt  drv.cpp  drv.h  drv_queue_manager.cpp  drv_queue_manager.h  drv_shader_manager.h  drv_wrappers.cpp  drv_wrappers.h  drvcmdbuffer.cpp  drvcmdbuffer.h  drvcmdbufferbank.cpp  drvcmdbufferbank.h  drvframegraph.h  drvlane.cpp  drvlane.h  drvsemaphorepool.cpp  drvsemaphorepool.h  drvstager.cpp  drvstager.h
src/drv/common/: CMakeLists.txt  descriptor_set_layout_holder.h  drv_interface.cpp  drv_interface.h  drv_resource_tracker.h  drvbarrier.cpp  drvbarrier.h  drvboundresource.hpp  drvcmdbuffer.cpp  drvcmdbuffer.h  drverror.cpp  drverror.h  drvrenderpass.cpp  drvrenderpass.h  drvresourcelocker.cpp  drvresourcelocker.h  drvresourcetracker.cpp  drvshader.h  drvtypes.cpp  drvtypes.h  drvwindow.h  exclusive.cpp  exclusive.h  fck_vindoz.h  hardwareconfig.cpp
src/drv/configs/: CMakeLists.txt  hardwareconfig.cpp  hardwareconfig.h
src/drv/profiler/: CMakeLists.txt  microprofiler.c  microprofiler.h
src/drv/runtimestats/: CMakeLists.txt  exported_gamestats.cpp  exported_gamestats.h  persistance.cpp  persistance.h  runtimestats.cpp  runtimestats.h  statscache.cpp  statscache.h  stattypes.cpp  stattypes.h
src/drv/types/: CMakeLists.txt  drverror.h  drvimage_types.cpp  drvimage_types.h  drvpipeline_types.cpp  drvpipeline_types.h  drvres_types.h  drvresourceptrs.hpp  drvtracking.hpp  drvtypes.cpp  drvtypes.h
src/drv/vulkan/: CMakeLists.txt  drvvulkan.cpp  drvvulkan.h
src/engine/: CMakeLists.txt
src/engine/assetloaders/: CMakeLists.txt
src/engine/cmdbuffer/: CMakeLists.txt  cmdBuffer.hpp  cmdRecorder.hpp
src/engine/controller/: CMakeLists.txt  controllerholder.cpp  controllerholder.h  randomgridcontroller.cpp
src/engine/data/: CMakeLists.txt  describedresource.hpp  kdtree.h  material.cpp  mesh.cpp  mesh.h  meshprovider.h  resourcepool.h  spheretree.hpp  textureprovider.h
src/engine/engine/: CMakeLists.txt  bufferstager.cpp  bufferstager.h  commands.cpp  engine.cpp  engine.h  garbage.cpp  garbage.h  imagestager.cpp  imagestager.h  resources.hpp  timestampcmdbuffers.cpp  timestampcmdbuffers.h
src/engine/entities/: CMakeLists.txt  entity.h  entitymanager.cpp  entitymanager.h
src/engine/eventpool/: CMakeLists.txt  eventpool.cpp  eventpool.h
src/engine/executionqueue/: CMakeLists.txt  execution_queue.cpp  execution_queue.h
src/engine/framegraph/: CMakeLists.txt  boundresource.hpp  execution_queue.cpp  execution_queue.h  framegraph.cpp  framegraph.h  framegraphDecl.h  garbage.cpp  garbage.h  garbagesystem.cpp  garbagesystem.h  slopgraph.cpp  slopgraph.h
src/engine/io/: CMakeLists.txt  blockfile.cpp  blockfile.h  filemanager.h  loadimage.h  uncomment.cpp  uncomment.h
src/engine/irenderer/: CMakeLists.txt  irenderer.cpp  irenderer.h
src/engine/isimulation/: CMakeLists.txt  isimulation.cpp  isimulation.h
src/engine/onetimebuffer/: CMakeLists.txt  oneTimeCmdBuffer.cpp  oneTimeCmdBuffer.hpp
src/engine/perfMetrics/: CMakeLists.txt  perf_metrics.cpp.in  perf_metrics.h  perfmetrics.css  perfmetrics.html  perfmetrics.js
src/engine/physics/: CMakeLists.txt  physics.cpp  physics.h
src/engine/renderpass/: CMakeLists.txt  renderpass.cpp  renderpass.h
src/engine/resourcebindings/: CMakeLists.txt  boundimageview.h
src/engine/resources/: CMakeLists.txt  glmeshprovider.h  gltextureprovider.cpp
src/engine/runtimestats/: CMakeLists.txt  exported_gamestats.cpp  exported_gamestats.h  persistance.h  runtimestats.cpp  runtimestats.h  statscache.cpp  statscache.h
src/engine/shaderbin/: CMakeLists.txt  shaderbin.cpp  shaderbin.h  shaderstats.h
src/engine/shadercompiler/: CMakeLists.txt  compile.cpp  compile.h  compileconfig.cpp  shadercompiler.cpp  shaderpreprocessor.cpp  spirvcompiler.cpp  spirvcompiler.h
src/engine/shadermanager/: CMakeLists.txt  shaderbin.cpp  shaderbin.h  shaderdescriptor.cpp  shaderdescriptor.h  shaderdescriptorcollection.cpp  shaderdescriptorcollection.h  shaderobject.cpp  shaderobject.h  shaderobjectregistry.cpp  shaderobjectregistry.h  shaderstats.h  shadertypes.h
src/engine/shaders/: CMakeLists.txt  animchar.frag  skeleton.vert
src/engine/timestamppool/: CMakeLists.txt  timestamppool.cpp  timestamppool.h
src/engine/ui/: CMakeLists.txt  ui.h
src/features/: CMakeLists.txt  featuresRelease.h  featuresStructures.h  featuresValidate.h
src/features/Debug/: features.h
src/features/Release/: features.h
src/lib/: CMakeLists.txt
src/lib/buffer/: CMakeLists.txt  buffer.hpp  framebuffer.cpp  framebuffer.h  glmesh.cpp  glmesh.h  gltexture.cpp  gltexture.h
src/lib/controller/: CMakeLists.txt  charactercontroller.cpp  charactercontroller.h  controllerholder.cpp  randomgridcontroller.h  splinecontroller.h
src/lib/data/: CMakeLists.txt  describedresource.hpp  kdtree.cpp  material.cpp  material.h  mesh.cpp  mesh.h  meshprovider.cpp  meshprovider.h  pixel.h  resourcepool.cpp  resourcepool.h  resourcepool.hpp  sampler.cpp  sampler.h  serializable.cpp  serializable.h  spheremesh.cpp  spheremesh.h  spheretree.hpp  texture.hpp  textureprovider.cpp  textureprovider.h
src/lib/drv/: CMakeLists.txt  drivers.h.in  drv.cpp  drv.h  drv_command_list_builder.cpp  drv_command_list_builder.h  drv_queue_manager.cpp  drv_queue_manager.h  drv_shader_manager.cpp  drv_shader_manager.h  drv_wrappers.cpp  drv_wrappers.h  drvcmdbufferbank.h  (+7 more)
(+477 files in other folders)
