add_subdirectory(controller)
add_subdirectory(engine)
add_subdirectory(data)
add_subdirectory(io)
add_subdirectory(assetloaders)
add_subdirectory(resources)
add_subdirectory(entities)
add_subdirectory(shadermanager)
add_subdirectory(shadercompiler)
add_subdirectory(irenderer)
add_subdirectory(isimulation)
add_subdirectory(framegraph)
add_subdirectory(executionqueue)
# add_subdirectory(ui)